konst/tests/misc_tests/misc_macro_ui_tests/option_macro_syntax_err.stderr
error: unexpected end of macro invocation
 --> tests/misc_tests/misc_macro_ui_tests/option_macro_syntax_err.rs:4:15
  |
4 | const _: u8 = option::unwrap_or!();
  |               ^^^^^^^^^^^^^^^^^^^^ missing tokens in macro arguments
  |
note: while trying to match meta-variable `$e:expr`
 --> src/option.rs
  |
  |     ($e:expr, $v:expr $(,)?) => {
  |      ^^^^^^^

error: unexpected end of macro invocation
 --> tests/misc_tests/misc_macro_ui_tests/option_macro_syntax_err.rs:5:39
  |
5 | const _: u8 = option::unwrap_or!(None,);
  |                                       ^ missing tokens in macro arguments
  |
note: while trying to match meta-variable `$v:expr`
 --> src/option.rs
  |
  |     ($e:expr, $v:expr $(,)?) => {
  |               ^^^^^^^

error: unexpected end of macro invocation
 --> tests/misc_tests/misc_macro_ui_tests/option_macro_syntax_err.rs:7:15
  |
7 | const _: u8 = option::unwrap_or_else!();
  |               ^^^^^^^^^^^^^^^^^^^^^^^^^ missing tokens in macro arguments
  |
note: while trying to match meta-variable `$e:expr`
 --> src/option.rs
  |
  |     ($e:expr, || $v:expr $(,)?) => {
  |      ^^^^^^^

error: unexpected end of macro invocation
 --> tests/misc_tests/misc_macro_ui_tests/option_macro_syntax_err.rs:8:44
  |
8 | const _: u8 = option::unwrap_or_else!(None,);
  |                                            ^ missing tokens in macro arguments
  |
note: while trying to match `||`
 --> src/option.rs
  |
  |     ($e:expr, || $v:expr $(,)?) => {
  |               ^^

error: expected the closure to take no arguments
 --> tests/misc_tests/misc_macro_ui_tests/option_macro_syntax_err.rs:9:15
  |
9 | const _: u8 = option::unwrap_or_else!(None, |_| 0u8);
  |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `option::unwrap_or_else` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unexpected end of macro invocation
  --> tests/misc_tests/misc_macro_ui_tests/option_macro_syntax_err.rs:11:27
   |
11 | const _: Result<(), u8> = option::ok_or!();
   |                           ^^^^^^^^^^^^^^^^ missing tokens in macro arguments
   |
note: while trying to match meta-variable `$e:expr`
  --> src/option.rs
   |
   |     ($e:expr, $v:expr $(,)?) => {
   |      ^^^^^^^

error: unexpected end of macro invocation
  --> tests/misc_tests/misc_macro_ui_tests/option_macro_syntax_err.rs:12:47
   |
12 | const _: Result<(), u8> = option::ok_or!(None,);
   |                                               ^ missing tokens in macro arguments
   |
note: while trying to match meta-variable `$v:expr`
  --> src/option.rs
   |
   |     ($e:expr, $v:expr $(,)?) => {
   |               ^^^^^^^

error: unexpected end of macro invocation
  --> tests/misc_tests/misc_macro_ui_tests/option_macro_syntax_err.rs:14:27
   |
14 | const _: Result<(), u8> = option::ok_or_else!();
   |                           ^^^^^^^^^^^^^^^^^^^^^ missing tokens in macro arguments
   |
note: while trying to match meta-variable `$e:expr`
  --> src/option.rs
   |
   |     ($e:expr, || $v:expr $(,)?) => {
   |      ^^^^^^^

error: unexpected end of macro invocation
  --> tests/misc_tests/misc_macro_ui_tests/option_macro_syntax_err.rs:15:58
   |
15 | const _: Result<(), u8> = option::ok_or_else!(None::<()>,);
   |                                                          ^ missing tokens in macro arguments
   |
note: while trying to match `||`
  --> src/option.rs
   |
   |     ($e:expr, || $v:expr $(,)?) => {
   |               ^^

error: expected the closure to take no arguments
  --> tests/misc_tests/misc_macro_ui_tests/option_macro_syntax_err.rs:16:27
   |
16 | const _: Result<(), u8> = option::ok_or_else!(None::<()>, |_| 0u8);
   |                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `option::ok_or_else` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unexpected end of macro invocation
  --> tests/misc_tests/misc_macro_ui_tests/option_macro_syntax_err.rs:18:23
   |
18 | const _: Option<u8> = option::map!();
   |                       ^^^^^^^^^^^^^^ missing tokens in macro arguments
   |
note: while trying to match meta-variable `$opt:expr`
  --> src/option.rs
   |
   |     ($opt:expr, |$param:pat_param| $mapper:expr $(,)? ) => {
   |      ^^^^^^^^^

error: unexpected end of macro invocation
  --> tests/misc_tests/misc_macro_ui_tests/option_macro_syntax_err.rs:19:47
   |
19 | const _: Option<u8> = option::map!(None::<()>,);
   |                                               ^ missing tokens in macro arguments
   |
note: while trying to match `|`
  --> src/option.rs
   |
   |     ($opt:expr, |$param:pat_param| $mapper:expr $(,)? ) => {
   |                 ^

error: expected the closure to take a pattern as an argument
  --> tests/misc_tests/misc_macro_ui_tests/option_macro_syntax_err.rs:20:23
   |
20 | const _: Option<u8> = option::map!(None::<()>, || 0u8);
   |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `option::map` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unexpected end of macro invocation
  --> tests/misc_tests/misc_macro_ui_tests/option_macro_syntax_err.rs:22:23
   |
22 | const _: Option<u8> = option::and_then!();
   |                       ^^^^^^^^^^^^^^^^^^^ missing tokens in macro arguments
   |
note: while trying to match meta-variable `$opt:expr`
  --> src/option.rs
   |
   |     ($opt:expr, |$param:pat_param| $mapper:expr $(,)? ) => {
   |      ^^^^^^^^^

error: unexpected end of macro invocation
  --> tests/misc_tests/misc_macro_ui_tests/option_macro_syntax_err.rs:23:52
   |
23 | const _: Option<u8> = option::and_then!(None::<()>,);
   |                                                    ^ missing tokens in macro arguments
   |
note: while trying to match `|`
  --> src/option.rs
   |
   |     ($opt:expr, |$param:pat_param| $mapper:expr $(,)? ) => {
   |                 ^

error: expected the closure to take a pattern as an argument
  --> tests/misc_tests/misc_macro_ui_tests/option_macro_syntax_err.rs:24:23
   |
24 | const _: Option<u8> = option::and_then!(None::<()>, || None);
   |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `option::and_then` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unexpected end of macro invocation
  --> tests/misc_tests/misc_macro_ui_tests/option_macro_syntax_err.rs:26:23
   |
26 | const _: Option<u8> = option::or_else!();
   |                       ^^^^^^^^^^^^^^^^^^ missing tokens in macro arguments
   |
note: while trying to match meta-variable `$opt:expr`
  --> src/option.rs
   |
   |     ($opt:expr, || $mapper:expr $(,)? ) => {
   |      ^^^^^^^^^

error: unexpected end of macro invocation
  --> tests/misc_tests/misc_macro_ui_tests/option_macro_syntax_err.rs:27:51
   |
27 | const _: Option<u8> = option::or_else!(None::<()>,);
   |                                                   ^ missing tokens in macro arguments
   |
note: while trying to match `||`
  --> src/option.rs
   |
   |     ($opt:expr, || $mapper:expr $(,)? ) => {
   |                 ^^

error: expected the closure to take no arguments
  --> tests/misc_tests/misc_macro_ui_tests/option_macro_syntax_err.rs:28:23
   |
28 | const _: Option<u8> = option::or_else!(None::<()>, |_| None);
   |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `option::or_else` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unexpected end of macro invocation
  --> tests/misc_tests/misc_macro_ui_tests/option_macro_syntax_err.rs:30:23
   |
30 | const _: Option<u8> = option::filter!();
   |                       ^^^^^^^^^^^^^^^^^ missing tokens in macro arguments
   |
note: while trying to match meta-variable `$e:expr`
  --> src/option.rs
   |
   |     ($e:expr, |$param:pat_param| $v:expr $(,)?) => {
   |      ^^^^^^^

error: unexpected end of macro invocation
  --> tests/misc_tests/misc_macro_ui_tests/option_macro_syntax_err.rs:31:50
   |
31 | const _: Option<u8> = option::filter!(None::<()>,);
   |                                                  ^ missing tokens in macro arguments
   |
note: while trying to match `|`
  --> src/option.rs
   |
   |     ($e:expr, |$param:pat_param| $v:expr $(,)?) => {
   |               ^

error: expected the closure to take a pattern as an argument
  --> tests/misc_tests/misc_macro_ui_tests/option_macro_syntax_err.rs:32:23
   |
32 | const _: Option<u8> = option::filter!(None::<()>, || false);
   |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `option::filter` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unexpected end of macro invocation
  --> tests/misc_tests/misc_macro_ui_tests/option_macro_syntax_err.rs:35:22
   |
35 |     let _: &mut u8 = option::get_or_insert!();
   |                      ^^^^^^^^^^^^^^^^^^^^^^^^ missing tokens in macro arguments
   |
note: while trying to match meta-variable `$opt:expr`
  --> src/option.rs
   |
   |     ($opt:expr, $inserted:expr $(,)?) => {
   |      ^^^^^^^^^

error: unexpected end of macro invocation
  --> tests/misc_tests/misc_macro_ui_tests/option_macro_syntax_err.rs:36:55
   |
36 |     let _: &mut u8 = option::get_or_insert!(&mut None,);
   |                                                       ^ missing tokens in macro arguments
   |
note: while trying to match meta-variable `$inserted:expr`
  --> src/option.rs
   |
   |     ($opt:expr, $inserted:expr $(,)?) => {
   |                 ^^^^^^^^^^^^^^

error: unexpected end of macro invocation
  --> tests/misc_tests/misc_macro_ui_tests/option_macro_syntax_err.rs:40:22
   |
40 |     let _: &mut u8 = option::get_or_insert_with!();
   |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ missing tokens in macro arguments
   |
note: while trying to match meta-variable `$opt:expr`
  --> src/option.rs
   |
   |     ($opt:expr, || $default:expr $(,)?) => {
   |      ^^^^^^^^^

error: unexpected end of macro invocation
  --> tests/misc_tests/misc_macro_ui_tests/option_macro_syntax_err.rs:41:60
   |
41 |     let _: &mut u8 = option::get_or_insert_with!(&mut None,);
   |                                                            ^ missing tokens in macro arguments
   |
note: while trying to match `||`
  --> src/option.rs
   |
   |     ($opt:expr, || $default:expr $(,)?) => {
   |                 ^^

error: expected the closure to take no arguments
  --> tests/misc_tests/misc_macro_ui_tests/option_macro_syntax_err.rs:42:22
   |
42 |     let _: &mut u8 = option::get_or_insert_with!(&mut None, |_| 0u8);
   |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `option::get_or_insert_with` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unexpected end of macro invocation
  --> tests/misc_tests/misc_macro_ui_tests/option_macro_syntax_err.rs:46:22
   |
46 |     let _: &mut u8 = option::insert!();
   |                      ^^^^^^^^^^^^^^^^^ missing tokens in macro arguments
   |
note: while trying to match meta-variable `$opt:expr`
  --> src/option.rs
   |
   |     ($opt:expr, $inserted:expr $(,)?) => {
   |      ^^^^^^^^^

error: unexpected end of macro invocation
  --> tests/misc_tests/misc_macro_ui_tests/option_macro_syntax_err.rs:47:48
   |
47 |     let _: &mut u8 = option::insert!(&mut None,);
   |                                                ^ missing tokens in macro arguments
   |
note: while trying to match meta-variable `$inserted:expr`
  --> src/option.rs
   |
   |     ($opt:expr, $inserted:expr $(,)?) => {
   |                 ^^^^^^^^^^^^^^

error: unexpected end of macro invocation
  --> tests/misc_tests/misc_macro_ui_tests/option_macro_syntax_err.rs:50:30
   |
50 | const _: Option<(u8, u16)> = option::zip!();
   |                              ^^^^^^^^^^^^^^ missing tokens in macro arguments
   |
note: while trying to match meta-variable `$left:expr`
  --> src/option.rs
   |
   |     ($left:expr, $right:expr) => {
   |      ^^^^^^^^^^

error: unexpected end of macro invocation
  --> tests/misc_tests/misc_macro_ui_tests/option_macro_syntax_err.rs:51:48
   |
51 | const _: Option<(u8, u16)> = option::zip!(None,);
   |                                                ^ missing tokens in macro arguments
   |
note: while trying to match meta-variable `$right:expr`
  --> src/option.rs
   |
   |     ($left:expr, $right:expr) => {
   |                  ^^^^^^^^^^^

error: unexpected end of macro invocation
  --> tests/misc_tests/misc_macro_ui_tests/option_macro_syntax_err.rs:53:17
   |
53 | const _: bool = option::is_some_and!();
   |                 ^^^^^^^^^^^^^^^^^^^^^^ missing tokens in macro arguments
   |
note: while trying to match meta-variable `$opt:expr`
  --> src/option.rs
   |
   |     ($opt:expr, |$param:pat_param| $pred:expr $(,)?) => {
   |      ^^^^^^^^^

error: unexpected end of macro invocation
  --> tests/misc_tests/misc_macro_ui_tests/option_macro_syntax_err.rs:54:43
   |
54 | const _: bool = option::is_some_and!(None,);
   |                                           ^ missing tokens in macro arguments
   |
note: while trying to match `|`
  --> src/option.rs
   |
   |     ($opt:expr, |$param:pat_param| $pred:expr $(,)?) => {
   |                 ^

error: expected the closure to take a pattern as an argument
  --> tests/misc_tests/misc_macro_ui_tests/option_macro_syntax_err.rs:55:17
   |
55 | const _: bool = option::is_some_and!(None, || false);
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `option::is_some_and` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unexpected end of macro invocation
  --> tests/misc_tests/misc_macro_ui_tests/option_macro_syntax_err.rs:57:17
   |
57 | const _: bool = option::is_none_or!();
   |                 ^^^^^^^^^^^^^^^^^^^^^ missing tokens in macro arguments
   |
note: while trying to match meta-variable `$opt:expr`
  --> src/option.rs
   |
   |     ($opt:expr, |$param:pat_param| $pred:expr $(,)?) => {
   |      ^^^^^^^^^

error: unexpected end of macro invocation
  --> tests/misc_tests/misc_macro_ui_tests/option_macro_syntax_err.rs:58:42
   |
58 | const _: bool = option::is_none_or!(None,);
   |                                          ^ missing tokens in macro arguments
   |
note: while trying to match `|`
  --> src/option.rs
   |
   |     ($opt:expr, |$param:pat_param| $pred:expr $(,)?) => {
   |                 ^

error: expected the closure to take a pattern as an argument
  --> tests/misc_tests/misc_macro_ui_tests/option_macro_syntax_err.rs:59:17
   |
59 | const _: bool = option::is_none_or!(None, || false);
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `option::is_none_or` (in Nightly builds, run with -Z macro-backtrace for more info)
